@@ -51,6 +51,7 @@
 
 <div style="float:left">
   <%= form_tag search_stickies_path, method: :get, remote: true, id: "stickies_search", style: 'margin-bottom:0px', class: 'form-search' do %>
+    <%= hidden_field_tag :from, 'project' %>
     <%= hidden_field_tag :order, params[:order] %>
     <%= hidden_field_tag :direction, 0 %>
     <% if false %>
